chore: only strip linux x86 builds
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/package-ffi-engine.yml
+++ b/.github/workflows/package-ffi-engine.yml
@@ -90,7 +90,7 @@ jobs:
         run: |
           strip -x target/${{ matrix.platform.target }}/release/libfliptengine.dylib
 
-      - if: startsWith(matrix.platform.name, 'Linux')
+      - if: startsWith(matrix.platform.name, 'Linux-x86_64')
         run: |
           strip -x target/${{ matrix.platform.target }}/release/libfliptengine.so
 
