--- a/.github/workflows/package-ffi-engine.yml
+++ b/.github/workflows/package-ffi-engine.yml
@@ -1,5 +1,7 @@
 name: Package FFI Engine
 on:
+  pull_request:
+    branches: ["main"]
   push:
     tags: ["flipt-engine-ffi-v**"]
   workflow_dispatch:
@@ -14,26 +16,44 @@ permissions:
 jobs:
   build:
     strategy:
+      fail-fast: false
       matrix:
         platform:
           - name: Linux-x86_64
             os: ubuntu-latest
-            use_cross: false
             target: x86_64-unknown-linux-gnu
+            use_cross: false
+
           - name: Linux-arm64
             os: ubuntu-latest
             target: aarch64-unknown-linux-gnu
             use_cross: true
+
+          - name: Linux-x86_64-musl
+            os: ubuntu-latest
+            target: x86_64-unknown-linux-musl
+            use_cross: true
+
+          - name: Linux-arm64-musl
+            os: ubuntu-latest
+            target: aarch64-unknown-linux-musl
+            use_cross: true
+
           - name: Darwin-arm64
             os: macos-latest
             target: aarch64-apple-darwin
             use_cross: false
+
           - name: Darwin-x86_64
             os: macos-latest
             target: x86_64-apple-darwin
             use_cross: false
 
     runs-on: ${{ matrix.platform.os }}
+
+    env:
+      CARGO_TERM_COLOR: always
+
     steps:
       - uses: actions/checkout@v4
 
@@ -54,18 +74,23 @@ jobs:
             target/
           key: ${{ runner.os }}-${{ matrix.platform.target}}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Build Rust ${{ matrix.platform.name }}
+      - name: Set RUSTFLAGS
+        if: endsWith(matrix.platform.target, '-musl')
+        run: |
+          echo "RUSTFLAGS=-C target-feature=-crt-static" >> $GITHUB_ENV
+
+      - name: Build ${{ matrix.platform.name }}
         uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --target ${{ matrix.platform.target }} --release
+          args: -p flipt-engine-ffi --target ${{ matrix.platform.target }} --release
           use-cross: ${{ matrix.platform.use_cross }}
 
       - if: startsWith(matrix.platform.name, 'Darwin')
         run: |
           strip -x target/${{ matrix.platform.target }}/release/libfliptengine.dylib
 
-      - if: matrix.platform.name == 'Linux-x86_64'
+      - if: startsWith(matrix.platform.name, 'Linux-x86_64')
         run: |
           strip -x target/${{ matrix.platform.target }}/release/libfliptengine.so
 
@@ -74,9 +99,16 @@ jobs:
             target/${{ matrix.platform.target }}/release/libfliptengine.* \
             || true
 
+      - name: Upload Artifacts (Pull Request)
+        uses: actions/upload-artifact@v4
+        if: github.event_name == 'pull_request'
+        with:
+          name: flipt-engine-ffi-${{ matrix.platform.name }}
+          path: flipt-engine-ffi-${{ matrix.platform.name }}.tar.gz
+
       - name: Upload Release Assets (Tag)
         uses: softprops/action-gh-release@v2
-        if: github.event_name == 'push'
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
         with:
           tag_name: ${{ github.ref_name }}
           files: |
@@ -84,7 +116,7 @@ jobs:
 
       - name: Upload Release Assets (Workflow Dispatch)
         uses: softprops/action-gh-release@v2
-        if: github.event_name == 'workflow_dispatch'
+        if: github.event_name == 'workflow_dispatch' && !endswith(github.event.inputs.tag, 'pre')
         with:
           tag_name: flipt-engine-ffi-${{ github.event.inputs.tag }}
           files: |
