--- a/.github/workflows/package-go-sdk.yml
+++ b/.github/workflows/package-go-sdk.yml
@@ -1,7 +1,9 @@
 name: Package Go SDK
 on:
   push:
-    tags: ["flipt-client-go-**"]
+    tags:
+      - "flipt-client-go-**"
+      - "flipt-client-go-musl-**"
 
 permissions:
   contents: write
@@ -10,7 +12,7 @@ jobs:
   build:
     uses: ./.github/workflows/package-ffi-sdks.yml
     with:
-      sdk: go
+      sdks: ${{ startsWith(github.ref, 'refs/tags/flipt-client-go-musl-') && 'go-musl' || 'go' }}
       engine-tag: "latest"
       tag: ${{ github.ref }}
     secrets: inherit
