--- a/flipt-client-dart/pubspec.yaml
+++ b/flipt-client-dart/pubspec.yaml
@@ -1,10 +1,10 @@
 name: flipt_client
 description: Flipt Client Evaluation SDK for Dart
-version: 0.1.0
+version: 0.1.0-pre.3
 homepage: https://github.com/flipt-io/flipt-client-sdks/tree/main/flipt-client-dart
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.12.0 <4.0.0'
 
 dependencies:
   ffi: ^2.0.1
