--- a/flipt-client-dart/pubspec.yaml
+++ b/flipt-client-dart/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flipt_client
 description: Flipt Client Evaluation SDK for Dart
-version: 0.1.0
+version: 0.1.0-pre.2
 homepage: https://github.com/flipt-io/flipt-client-sdks/tree/main/flipt-client-dart
 
 environment:
