chore: use secrets
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/package-dart-sdk.yml
+++ b/.github/workflows/package-dart-sdk.yml
@@ -21,10 +21,9 @@ jobs:
 
   build:
     needs: setup
-    env:
-      PUB_TOKEN: ${{ needs.setup.outputs.pub-token }}
     uses: ./.github/workflows/package-ffi-sdks.yml
     with:
       sdks: dart
       engine-tag: "latest"
-    secrets: inherit
+    secrets:
+      PUB_TOKEN: ${{ needs.setup.outputs.pub-token }}
