chore: try to do it in the main workflow
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/package-ffi-sdks.yml
+++ b/.github/workflows/package-ffi-sdks.yml
@@ -29,7 +29,6 @@ env:
   MAVEN_PUBLISH_REGISTRY_URL: ${{ secrets.MAVEN_PUBLISH_REGISTRY_URL }}
   PGP_PRIVATE_KEY: ${{ secrets.PGP_PRIVATE_KEY }}
   PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
-  PUB_TOKEN: ${{ secrets.PUB_TOKEN }}
 
 jobs:
   build:
@@ -66,6 +65,16 @@ jobs:
           app_id: ${{ secrets.FLIPT_RELEASE_BOT_APP_ID }}
           private_key: ${{ secrets.FLIPT_RELEASE_BOT_APP_PEM }}
           installation_id: ${{ secrets.FLIPT_RELEASE_BOT_INSTALLATION_ID }}
+
+      - name: Get Pub.Dev OIDC Token
+        if: ${{ inputs.sdks == 'dart' }}
+        run: |
+          OIDC_TOKEN=$(curl -sLS "${ACTIONS_ID_TOKEN_REQUEST_URL}&audience=https://pub.dev" -H "User-Agent: actions/oidc-client" -H "Authorization: Bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" | jq -r '.value')
+          if [ -z "$OIDC_TOKEN" ]; then
+            echo "Failed to obtain OIDC token"
+            exit 1
+          fi
+          echo "PUB_TOKEN=$OIDC_TOKEN" >> $GITHUB_ENV
 
       - name: Build Individual SDK(s)
         env:
