chore: try to build ffi engine for mobile platforms
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ rpath = true
 
 [profile.release.package.flipt-engine-wasm]
 opt-level = "s"
+
+[profile.release.package.flipt-engine-ffi]
+opt-level = "z"
