--- a/.github/workflows/package-ffi-engine.yml
+++ b/.github/workflows/package-ffi-engine.yml
@@ -49,6 +49,16 @@ jobs:
             target: x86_64-apple-darwin
             use_cross: false
 
+          - name: iOS-arm64
+            os: macos-latest
+            target: aarch64-apple-ios
+            use_cross: false
+
+          - name: Android-arm64
+            os: ubuntu-latest
+            target: aarch64-linux-android
+            use_cross: true
+
     runs-on: ${{ matrix.platform.os }}
 
     env:
