--- a/.github/workflows/package-ffi-engine.yml
+++ b/.github/workflows/package-ffi-engine.yml
@@ -89,6 +89,10 @@ jobs:
         run: |
           echo "RUSTFLAGS=-C target-feature=-crt-static" >> $GITHUB_ENV
 
+      - name: Install cross from GitHub
+        run: |
+          cargo install cross --git https://github.com/cross-rs/cross
+
       - name: Build ${{ matrix.platform.name }}
         uses: actions-rs/cargo@v1
         with:
