chore: dont install cross if exists
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/package-ffi-engine.yml
+++ b/.github/workflows/package-ffi-engine.yml
@@ -91,7 +91,7 @@ jobs:
 
       - name: Install cross from GitHub
         run: |
-          cargo install cross --git https://github.com/cross-rs/cross
+          which cross || cargo install cross --git https://github.com/cross-rs/cross
 
       - name: Build ${{ matrix.platform.name }}
         uses: actions-rs/cargo@v1
