--- a/.github/workflows/package-ffi-engine.yml
+++ b/.github/workflows/package-ffi-engine.yml
@@ -47,6 +47,16 @@ jobs:
             target: x86_64-apple-darwin
             use_cross: false
 
+          - name: iOS-arm64
+            os: macos-latest
+            target: aarch64-apple-ios
+            use_cross: false
+
+          - name: Android-arm64
+            os: ubuntu-latest
+            target: aarch64-linux-android
+            use_cross: true
+
     runs-on: ${{ matrix.platform.os }}
 
     env:
@@ -76,6 +86,10 @@ jobs:
         if: endsWith(matrix.platform.target, '-musl')
         run: |
           echo "RUSTFLAGS=-C target-feature=-crt-static" >> $GITHUB_ENV
+
+      - name: Install cross from GitHub
+        run: |
+          which cross || cargo install cross --git https://github.com/cross-rs/cross
 
       - name: Build ${{ matrix.platform.name }}
         uses: actions-rs/cargo@v1
