--- a/flipt-client-node/package.json
+++ b/flipt-client-node/package.json
@@ -17,8 +17,7 @@
     "test": "jest",
     "build": "tsc"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/jest": "^29.5.10",
     "@types/node": "^22.0.0",
