--- a/.github/workflows/package-browser-sdk.yml
+++ b/.github/workflows/package-browser-sdk.yml
@@ -8,24 +8,26 @@ permissions:
 
 env:
   NPM_API_KEY: ${{ secrets.NPM_API_KEY }}
+  GO_VERSION: "1.22"
+  DAGGER_VERSION: "0.12.3"
 
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Sources
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - uses: actions/setup-go@v5
         with:
-          go-version: "1.21.3"
+          go-version: ${{ env.GO_VERSION }}
           check-latest: true
           cache: true
 
       - name: Install Dagger
         run: |
           cd /usr/local
-          curl -L https://dl.dagger.io/dagger/install.sh | DAGGER_VERSION=$DAGGER_VERSION sh
+          curl -L https://dl.dagger.io/dagger/install.sh | DAGGER_VERSION=${{ env.DAGGER_VERSION }} sh
 
       - name: Build Individual SDK(s)
         run: |
