--- a/.github/workflows/test-sdks.yml
+++ b/.github/workflows/test-sdks.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
   workflow_dispatch:
 
+env:
+  GO_VERSION: "1.22"
+  DAGGER_VERSION: "0.12.3"
+
 jobs:
   test:
     name: Integration Tests
@@ -16,14 +20,14 @@ jobs:
 
       - uses: actions/setup-go@v5
         with:
-          go-version: "1.21.3"
+          go-version: ${{ env.GO_VERSION }}
           check-latest: true
           cache: true
 
       - name: Install Dagger
         run: |
           cd /usr/local
-          curl -L https://dl.dagger.io/dagger/install.sh | DAGGER_VERSION=$DAGGER_VERSION sh
+          curl -L https://dl.dagger.io/dagger/install.sh | DAGGER_VERSION=${{ env.DAGGER_VERSION }} sh
 
       - name: Run Integration Tests
         run: |
