--- a/flipt-client-node/package.json
+++ b/flipt-client-node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@flipt-io/flipt-client",
-  "version": "0.9.0",
+  "version": "0.10.0",
   "description": "Flipt Client Evaluation SDK",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -8,8 +8,7 @@
   "author": "Flipt Devs <dev@flipt.io>",
   "license": "MIT",
   "files": [
-    "dist",
-    "ext"
+    "dist"
   ],
   "scripts": {
     "fmt": "prettier --config .prettierrc 'src/**/*.ts' --write",
@@ -17,15 +16,10 @@
     "test": "jest",
     "build": "tsc"
   },
-  "dependencies": {
-    "@2060.io/ffi-napi": "^4.0.9",
-    "@2060.io/ref-napi": "^3.0.6",
-    "@types/ffi": "^0.2.7"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/jest": "^29.5.10",
     "@types/node": "^22.0.0",
-    "@types/ref-struct-di": "^1.1.12",
     "jest": "^29.7.0",
     "prettier": "^3.1.0",
     "ts-jest": "^29.1.1"
