--- a/flipt-client-react/package.json
+++ b/flipt-client-react/package.json
@@ -2,16 +2,36 @@
   "name": "@flipt-io/flipt-client-react",
   "version": "0.0.1",
   "description": "Flipt Client Evaluation React SDK",
-  "main": "index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "fmt": "prettier --config .prettierrc 'src/**/*.ts' --write",
+    "lint": "prettier --check src/**/*.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup -c"
   },
-  "author": "",
+  "author": "Flipt Devs <dev@flipt.io>",
   "license": "MIT",
+  "exports": {
+    "types": "./dist/types/index.d.ts",
+    "require": "./dist/index.cjs",
+    "import": "./dist/index.mjs"
+  },
+  "files": [
+    "dist",
+    "src"
+  ],
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/react": "^18.3.8",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
+    "rollup": "^4.22.2",
+    "rollup-plugin-dts": "^6.1.1",
+    "tslib": "^2.7.0",
     "typescript": "^5.6.2"
   },
   "dependencies": {
