--- a/flipt-client-react/package.json
+++ b/flipt-client-react/package.json
@@ -19,14 +19,19 @@
   "scripts": {
     "fmt": "prettier --config .prettierrc 'src/**/*.@(ts|tsx|js)' --write",
     "lint": "prettier --check src/**/*.@(ts|tsx|js)",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "rollup -c"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@testing-library/react": "^16.0.1",
+    "@types/jest": "^29.0.0",
     "@types/react": "^18.3.8",
+    "jest": "^29.0.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-jsdom-global": "^4.0.0",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "rollup": "^4.22.2",
