--- a/flipt-client-react/package.json
+++ b/flipt-client-react/package.json
@@ -27,7 +27,7 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
     "@testing-library/react": "^16.0.1",
-    "@types/jest": "^29.0.0",
+    "@types/jest": "^29.5.13",
     "@types/react": "^18.3.8",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -36,6 +36,7 @@
     "react": "^18.3.1",
     "rollup": "^4.22.2",
     "rollup-plugin-dts": "^6.1.1",
+    "ts-jest": "^29.2.5",
     "tslib": "^2.7.0",
     "typescript": "^5.6.2"
   },
