chore: readme add back unit tests
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/flipt-client-browser/package.json
+++ b/flipt-client-browser/package.json
@@ -10,6 +10,16 @@
   "files": [
     "dist"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/flipt-io/flipt-client-sdks/tree/main/flipt-client-react"
+  },
+  "keywords": [
+    "flipt",
+    "feature flags",
+    "feature toggles",
+    "wasm"
+  ],
   "scripts": {
     "fmt": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "lint": "prettier --check src/**/*.ts",
