--- a/flipt-client-react/package.json
+++ b/flipt-client-react/package.json
@@ -11,6 +11,16 @@
     "dist",
     "src"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/flipt-io/flipt-client-sdks/tree/main/flipt-client-react"
+  },
+  "keywords": [
+    "flipt",
+    "feature flags",
+    "feature toggles",
+    "react"
+  ],
   "exports": {
     "types": "./dist/types/index.d.ts",
     "require": "./dist/index.cjs",
@@ -28,6 +38,7 @@
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@testing-library/react": "^16.0.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
