--- a/flipt-client-react/package.json
+++ b/flipt-client-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@flipt-io/flipt-client-react",
-  "version": "0.0.1-rc.3",
+  "version": "0.0.1",
   "description": "Flipt Client Evaluation React SDK",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
