feat: React sdk (#393)
* fix: export models outside package

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: fmt

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: dont export unneeded types

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: lint

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* feat: intro react sdk

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: add rollup

* chore: fmt

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: add tests

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: rm dist

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: more fmt

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: setup publish workflow

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: fmt

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: set rc

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: fix node workflow

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: public

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: add back rollup external option

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: export everything

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: fml

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: readme add back unit tests

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: bump version

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: update example

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: update ma

--- a/flipt-client-browser/package.json
+++ b/flipt-client-browser/package.json
@@ -5,11 +5,20 @@
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
-  "private": false,
   "author": "Flipt Devs <dev@flipt.io>",
   "license": "MIT",
   "files": [
     "dist"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/flipt-io/flipt-client-sdks/tree/main/flipt-client-react"
+  },
+  "keywords": [
+    "flipt",
+    "feature flags",
+    "feature toggles",
+    "wasm"
   ],
   "scripts": {
     "fmt": "prettier --config .prettierrc 'src/**/*.ts' --write",
