chore: run prettier; add note about nextjs app router
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/package-react-sdk.yml
+++ b/.github/workflows/package-react-sdk.yml
@@ -14,8 +14,8 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: '18'
-          registry-url: 'https://registry.npmjs.org'
+          node-version: "18"
+          registry-url: "https://registry.npmjs.org"
 
       - run: |
           npm ci
@@ -24,4 +24,3 @@ jobs:
         working-directory: flipt-client-react
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_API_KEY }}
-
