chore: add licenses/repository to fix cargo warnings
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/flipt-engine-ffi/Cargo.toml
+++ b/flipt-engine-ffi/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Flipt Devs <dev@flipt.io>"]
 license = "MIT"
 description = "Flipt FFI Client Engine"
 publish = false
+repository = "https://github.com/flipt-io/flipt-client-sdks"
 
 [dependencies]
 libc = "0.2.150"
