--- a/flipt-evaluation/Cargo.toml
+++ b/flipt-evaluation/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Flipt Devs <dev@flipt.io>"]
 license = "MIT"
 description = "Flipt Evaluation Library"
 publish = false
+repository = "https://github.com/flipt-io/flipt-client-sdks"
 
 [lib]
 name = "fliptevaluation"
