--- a/.github/workflows/package-ffi-engine.yml
+++ b/.github/workflows/package-ffi-engine.yml
@@ -47,15 +47,20 @@ jobs:
             target: x86_64-apple-darwin
             use_cross: false
 
-          - name: iOS-arm64
-            os: macos-latest
-            target: aarch64-apple-ios
+          - name: Windows-x86_64
+            os: windows-latest
+            target: x86_64-pc-windows-gnu
             use_cross: false
 
-          - name: Android-arm64
-            os: ubuntu-latest
-            target: aarch64-linux-android
-            use_cross: true
+          # - name: iOS-arm64
+          #   os: macos-latest
+          #   target: aarch64-apple-ios
+          #   use_cross: false
+
+          # - name: Android-arm64
+          #   os: ubuntu-latest
+          #   target: aarch64-linux-android
+          #   use_cross: true
 
     runs-on: ${{ matrix.platform.os }}
 
