--- a/flipt-engine-ffi/Cargo.toml
+++ b/flipt-engine-ffi/Cargo.toml
@@ -18,6 +18,7 @@ futures-util = "0.3.30"
 native-tls = { version = "0.2", features = ["vendored"] }
 futures = "0.3"
 thiserror = "1.0.63"
+anyhow = "1.0"
 
 [dependencies.flipt-evaluation]
 path = "../flipt-evaluation"
