--- a/.github/workflows/package-ffi-engine.yml
+++ b/.github/workflows/package-ffi-engine.yml
@@ -120,7 +120,7 @@ jobs:
             target/${{ matrix.platform.target }}/release/libfliptengine.* \
             || true
 
-      - if: startsWith(matrix.platform.name, 'Windows') }}
+      - if: startsWith(matrix.platform.name, 'Windows')
         run: |
           7z a -tzip flipt-engine-ffi-${{ matrix.platform.name }}.zip \
             target\${{ matrix.platform.target }}\release\libfliptengine.* \
