--- a/.github/workflows/package-ffi-engine.yml
+++ b/.github/workflows/package-ffi-engine.yml
@@ -122,8 +122,8 @@ jobs:
 
       - if: startsWith(matrix.platform.name, 'Windows')
         run: |
-          7z a -tzip flipt-engine-ffi-${{ matrix.platform.name }}.zip \
-            target\${{ matrix.platform.target }}\release\libfliptengine.* \
+          7z a -tzip flipt-engine-ffi-${{ matrix.platform.name }}.zip `
+            target\${{ matrix.platform.target }}\release\libfliptengine.* `
             || true
 
       - name: Upload To Pull Request (Pull Request)
