chore: no lib prefix?
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/package-ffi-engine.yml
+++ b/.github/workflows/package-ffi-engine.yml
@@ -117,7 +117,7 @@ jobs:
       - if: ${{ !startsWith(matrix.platform.name, 'Windows') }}
         run: |
           tar -czvf flipt-engine-ffi-${{ matrix.platform.name }}.tar.gz \
-            target/${{ matrix.platform.target }}/release/libfliptengine.* \
+            target/${{ matrix.platform.target }}/release/fliptengine.* \
             || true
 
       - if: startsWith(matrix.platform.name, 'Windows')
