chore: retry requests, ensure consistency in error handling
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/flipt-engine-ffi/Cargo.toml
+++ b/flipt-engine-ffi/Cargo.toml
@@ -18,6 +18,8 @@ futures-util = "0.3.30"
 native-tls = { version = "0.2", features = ["vendored"] }
 futures = "0.3"
 thiserror = "1.0.63"
+reqwest-retry = "0.6.1"
+reqwest-middleware = "0.3.3"
 
 [dependencies.flipt-evaluation]
 path = "../flipt-evaluation"
