--- a/flipt-engine-ffi/Cargo.toml
+++ b/flipt-engine-ffi/Cargo.toml
@@ -12,10 +12,14 @@ repository = "https://github.com/flipt-io/flipt-client-sdks"
 libc = "0.2.150"
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = { version = "1.0.89", features = ["raw_value"] }
-reqwest = { version = "0.12.2", features = ["json", "blocking"] }
+reqwest = { version = "0.12.2", features = ["json", "stream"] }
+tokio = { version = "1.36.0", features = ["full"] }
+futures-util = "0.3.30"
 native-tls = { version = "0.2", features = ["vendored"] }
 futures = "0.3"
 thiserror = "1.0.63"
+reqwest-retry = "0.6.1"
+reqwest-middleware = "0.3.3"
 
 [dependencies.flipt-evaluation]
 path = "../flipt-evaluation"
@@ -27,4 +31,3 @@ mockito = "1.4.0"
 [lib]
 name = "fliptengine"
 crate-type = ["rlib", "dylib", "staticlib"]
-
