--- a/flipt-client-react/package.json
+++ b/flipt-client-react/package.json
@@ -60,8 +60,8 @@
     "typescript": "^5.6.0"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "dependencies": {
     "@flipt-io/flipt-client-browser": "^0.3.1"
