--- a/flipt-client-react/package.json
+++ b/flipt-client-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@flipt-io/flipt-client-react",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "Flipt Client Evaluation React SDK",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "fmt": "prettier --config .prettierrc 'src/**/*.@(ts|tsx|js)' '**/*.@(ts|tsx|js)' --write",
-    "lint": "prettier --check 'src/**/*.@(ts|tsx|js)' '**/*.@(ts|tsx|js)'",
+    "lint": "eslint 'src/**/*.@(ts|tsx|js)' '**/*.@(ts|tsx|js)'",
     "test": "jest",
     "build": "rollup -c"
   },
@@ -40,10 +40,13 @@
     "@rollup/plugin-typescript": "^12.1.0",
     "@testing-library/react": "^16.0.1",
     "@types/jest": "^29.5.13",
-    "@types/react": "^18.3.1",
+    "@types/react": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "globals": "^15.9.0",
     "jest": "^29.0.0",
