--- a/flipt-engine-ffi/Cargo.toml
+++ b/flipt-engine-ffi/Cargo.toml
@@ -14,6 +14,7 @@ serde = { version = "1.0.147", features = ["derive"] }
 serde_json = { version = "1.0.89", features = ["raw_value"] }
 reqwest = { version = "0.12.2", features = ["json", "stream"] }
 tokio = { version = "1.36.0", features = ["full"] }
+tokio-util = { version = "0.7", features = ["io", "codec"] }
 futures-util = "0.3.30"
 native-tls = { version = "0.2", features = ["vendored"] }
 futures = "0.3"
