--- a/flipt-client-csharp/src/FliptClient/FliptClient.csproj
+++ b/flipt-client-csharp/src/FliptClient/FliptClient.csproj
@@ -4,6 +4,14 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PackageId>Flipt.Client</PackageId>
+    <Authors>Flipt Devs (dev@flipt.io)</Authors>
+    <Company>Flipt.io</Company>
+    <Description>Flipt Client SDK</Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageTags>Flipt, Feature Flags</PackageTags>
+    <RepositoryUrl>https://github.com/flipt-io/flipt-client-sdks/tree/main/flipt-client-csharp</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
