--- a/flipt-client-csharp/src/FliptClient/FliptClient.csproj
+++ b/flipt-client-csharp/src/FliptClient/FliptClient.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PackageId>Flipt.Client</PackageId>
+    <Version>0.0.1</Version>
     <Authors>Flipt Devs (dev@flipt.io)</Authors>
     <Company>Flipt.io</Company>
     <Description>Flipt Client SDK</Description>
@@ -13,6 +14,10 @@
     <PackageTags>Flipt, Feature Flags</PackageTags>
     <RepositoryUrl>https://github.com/flipt-io/flipt-client-sdks/tree/main/flipt-client-csharp</RepositoryUrl>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="../../README.md" Pack="true" PackagePath="\"/>
+  </ItemGroup>
 
   <ItemGroup>
     <Content Include="ext/ffi/win_x86_64/fliptengine.dll" Condition="Exists('ext/ffi/win_x86_64/fliptengine.dll')">
